--- a/public/create-new.html
+++ b/public/create-new.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MimmiBet</title>
+    <link rel="icon" type="image/x-icon" href="/img/poker_ico.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -19,7 +20,9 @@
     <div class="container">
         <div class="row">
             <div class="col-6">
-                <h1 class="text-center mt-3 mb-3">MimmiBet</h1>
+                <div class="text-center">
+                    <a href="/"><img src="img/mimmi-sport-logo.png" class="logo-main-80" alt="MimmiBet" ></a>
+                </div>
                 <div class="row">
                     <div class="col-12 mt-3">
                         <div class="card">
@@ -59,7 +62,7 @@
                             </div>
                             <div class="col-12">
                                 <div class="text-center">
-                                    <b>MULTIPLA A QUOTA FISSA</b>
+                                    <b>MULTIPLA QUOTA FISSA</b>
                                 </div>
                             </div>
                             <div class="col-12 mb-5" id="bet-slip-rows">
