--- a/public/fake-new.html
+++ b/public/fake-new.html
@@ -18,25 +18,95 @@
 <body>
 <section>
     <div class="container">
-        <div class="row justify-content-center">
+        <div class="row">
             <div class="col-6">
-                <h1 class="text-center mt-3 mb-3">MimmiBet</h1>
-                <div class="alert alert-danger" role="alert">
-                    Non trovo la tua schedina, magari il Mimmi se l'è pippata.
+                <div class="text-center">
+                    <a href="/"><img src="img/mimmi-sport-logo.png" class="logo-main-80" alt="MimmiBet" ></a>
                 </div>
-                <div class="d-flex justify-content-center">
-                    <a href="/" class="btn btn-primary">Torna alla home</a>
+                <div class="row">
+                    <div class="col-12 mt-3">
+                        <div class="card">
+                            <div class="card-header">
+                                <select class="form-select" aria-label="Default select example" id="sport-select"
+                                        onchange="changeSport()">
+                                    <option selected>Caricando...</option>
+                                </select>
+                            </div>
+                            <div class="card-body" id="odds">
+                                <div class="d-flex justify-content-center">
+                                    <span>Seleziona uno sport</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 position-relative">
+                <div class="bet-slip">
+                    <div class="bet-slip-logo mt-5">
+                        <img src="img/mimmi-sport-logo.png" alt="MimmiBet">
+                    </div>
+                    <div class="p-3">
+                        <form class="row">
+                            <div class="col-6">
+                                <div class="mb-3 text-center">
+                                    <label for="name" class="form-label h6"><b>Nome e cognome</b></label>
+                                    <input type="text" class="form-control border-0 text-center" id="name"
+                                           aria-describedby="emailHelp" placeholder="Lorenzo Mimmi">
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="mb-3 text-center">
+                                    <label for="phone" class="form-label h6"><b>Telefono</b></label>
+                                    <input type="text" class="form-control border-0 text-center" id="phone"
+                                           placeholder="3311223344">
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="text-center">
+                                    <b>MULTIPLA QUOTA FISSA</b>
+                                </div>
+                            </div>
+                            <div class="col-12 mb-5" id="bet-slip-rows">
+                                <div class="text-center">
+                                    <span>Nessuna scommessa selzionata</span>
+                                </div>
+                            </div>
+                            <div class="col-9 ps-5">
+                                <span class="h5">IMPORTO SCOMMESSO $</span>
+                            </div>
+                            <div class="col-3 text-end">
+                                <div class="mb-3 ">
+                                    <input type="text" class="form-control border-0 text-end" id="amount"
+                                           aria-describedby="emailHelp" placeholder="0" onchange="updateTotal()">
+                                </div>
+                            </div>
+                            <div class="col-9 ps-5">
+                                <span class="h5">IMPORTO PAGAMENTO $</span>
+                            </div>
+                            <div class="col-3 text-end">
+                                <div class="mb-3 ">
+                                    <input type="text" class="form-control border-0 text-end no-background" id="total"
+                                           aria-describedby="emailHelp" placeholder="0" disabled>
+                                </div>
+                            </div>
+                            <div class="col-12 text-center">
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
+
 <script>
 
     const apiBaseUrl = '/api/v1';
     let events = [];
     let bets = [];
     let id = 'new'
+    let password = '';
 
     function updateSportsSelect() {
         const sportSelect = document.getElementById('sport-select');
@@ -116,7 +186,7 @@
                             <div class="col-5">
                                 <div class="d-flex flex-column justify-content-center align-items-center">
                                     <h5>${homeTeam}</h5>
-                                    <button class="btn ${bet?.winner === 'home'? 'btn-primary':'btn-outline-primary'}" onclick="addBet(this, '${homeTeam}')">
+                                    <button class="btn ${bet?.winner === 'home' ? 'btn-primary' : 'btn-outline-primary'}" onclick="addBet(this, '${homeTeam}')">
                                         <span class="quotation">${homeTeamQuotation}</span>
                                         <i class="fas fa-dollar"></i>
                                     </button>
@@ -125,7 +195,7 @@
                             <div class="col-2">
                                 <div class="d-flex flex-column justify-content-center align-items-center">
                                     <div>vs</div>
-                                    <button class="btn ${bet?.winner === 'draw'? 'btn-primary':'btn-outline-primary'} ${drawQuotation?'':'d-none'}" onclick="addBet(this)">
+                                    <button class="btn ${bet?.winner === 'draw' ? 'btn-primary' : 'btn-outline-primary'} ${drawQuotation ? '' : 'd-none'}" onclick="addBet(this)">
                                         <span class="quotation">${drawQuotation}</span>
                                         <i class="fas fa-dollar"></i>
                                     </button>
@@ -134,7 +204,7 @@
                             <div class="col-5">
                                 <div class="d-flex flex-column justify-content-center align-items-center">
                                     <h5>${awayTeam}</h5>
-                                    <button class="btn ${bet?.winner === 'away'? 'btn-primary':'btn-outline-primary'}" onclick="addBet(this, '${awayTeam}')">
+                                    <button class="btn ${bet?.winner === 'away' ? 'btn-primary' : 'btn-outline-primary'}" onclick="addBet(this, '${awayTeam}')">
                                         <span class="quotation">${awayTeamQuotation}</span>
                                         <i class="fas fa-dollar"></i>
                                     </button>
@@ -244,41 +314,10 @@
         updateLists();
     }
 
-    function saveBets() {
-        window.event.preventDefault();
-        event.preventDefault();
-        const name = document.getElementById('name').value;
-        const phone = document.getElementById('phone').value;
-        const amount = document.getElementById('amount').value;
-        const sport = document.getElementById('sport-select').value;
-
-        const data = {
-            name,
-            phone,
-            amount,
-            sport,
-            bets,
-        };
-
-        fetch(`${apiBaseUrl}/betting/${id}`, {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify(data)
-        })
-            .then(response => response.json())
-            .then(data => {
-                console.log('Bet saved')
-                console.log(data);
-                if (data.id) {
-                    id = data.id;
-                    window.location.href = '/schedina.html?id=' + id;
-                }
-            });
-    }
 
     (() => {
+
+
         const urlParams = new URLSearchParams(window.location.search);
         id = urlParams.get('id') || 'new';
         if (id !== 'new') {
