--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MimmiBet</title>
+    <link rel="icon" type="image/x-icon" href="/img/poker_ico.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -16,10 +17,13 @@
 </head>
 <body>
 <section>
-    <div class="container">
+    <div class="container content">
         <div class="row justify-content-center">
             <div class="col-6">
-                <h1 class="text-center mt-3 mb-3">MimmiBet</h1>
+                <div class="text-center">
+                    <a href="/"><img src="img/mimmi-sport-logo.png" class="logo-main-100" alt="MimmiBet" ></a>
+                </div>
+
                 <div class="row">
                     <div class="col-12 mt-3">
                         <div class="card">
@@ -29,7 +33,10 @@
                                         <label for="code" class="form-label">Codice schedina</label>
                                         <input type="text" class="form-control" id="code" placeholder="xxxx" name="id">
                                     </div>
-                                    <button type="submit" class="btn btn-primary">Carica schedina</button>
+                                    <div class="d-flex justify-content-between">
+                                        <button type="submit" class="btn btn-primary">Carica schedina</button>
+                                        <a href="/fake-new.html" class="btn btn-success">Crea la tua schedina</a>
+                                    </div>
                                 </form>
                             </div>
                         </div>
@@ -39,6 +46,11 @@
         </div>
     </div>
 </section>
+<footer class="footer bg-dark text-light py-2 mt-5 sticky-bottom">
+    <div class="container text-center">
+        <p>&copy; 2024 <a href="https://meyler.it/">meyler.it</a>. Tutti i diritti riservati.</p>
+    </div>
+</footer>
 <script>
 
     const apiBaseUrl = '/api/v1';
@@ -124,7 +136,7 @@
                             <div class="col-5">
                                 <div class="d-flex flex-column justify-content-center align-items-center">
                                     <h5>${homeTeam}</h5>
-                                    <button class="btn ${bet?.winner === 'home'? 'btn-primary':'btn-outline-primary'}" onclick="addBet(this, '${homeTeam}')">
+                                    <button class="btn ${bet?.winner === 'home' ? 'btn-primary' : 'btn-outline-primary'}" onclick="addBet(this, '${homeTeam}')">
                                         <span class="quotation">${homeTeamQuotation}</span>
                                         <i class="fas fa-dollar"></i>
                                     </button>
@@ -133,7 +145,7 @@
                             <div class="col-2">
                                 <div class="d-flex flex-column justify-content-center align-items-center">
                                     <div>vs</div>
-                                    <button class="btn ${bet?.winner === 'draw'? 'btn-primary':'btn-outline-primary'} ${drawQuotation?'':'d-none'}" onclick="addBet(this)">
+                                    <button class="btn ${bet?.winner === 'draw' ? 'btn-primary' : 'btn-outline-primary'} ${drawQuotation ? '' : 'd-none'}" onclick="addBet(this)">
                                         <span class="quotation">${drawQuotation}</span>
                                         <i class="fas fa-dollar"></i>
                                     </button>
@@ -142,7 +154,7 @@
                             <div class="col-5">
                                 <div class="d-flex flex-column justify-content-center align-items-center">
                                     <h5>${awayTeam}</h5>
-                                    <button class="btn ${bet?.winner === 'away'? 'btn-primary':'btn-outline-primary'}" onclick="addBet(this, '${awayTeam}')">
+                                    <button class="btn ${bet?.winner === 'away' ? 'btn-primary' : 'btn-outline-primary'}" onclick="addBet(this, '${awayTeam}')">
                                         <span class="quotation">${awayTeamQuotation}</span>
                                         <i class="fas fa-dollar"></i>
                                     </button>
