--- a/public/schedina.html
+++ b/public/schedina.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>MimmiBet</title>
+    <link rel="icon" type="image/x-icon" href="/img/poker_ico.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -28,18 +29,18 @@
                             <div class="col-6">
                                 <div class="mb-3 text-center">
                                     <label for="name" class="form-label h6"><b>Nome e cognome</b></label>
-                                    <input type="text" class="form-control border-0 text-center" id="name" aria-describedby="emailHelp" placeholder="Lorenzo Mimmi">
+                                    <input type="text" class="form-control border-0 text-center text-end no-background" id="name" aria-describedby="emailHelp" placeholder="Lorenzo Mimmi" disabled>
                                 </div>
                             </div>
                             <div class="col-6">
                                 <div class="mb-3 text-center">
                                     <label for="phone" class="form-label h6"><b>Telefono</b></label>
-                                    <input type="text" class="form-control border-0 text-center" id="phone" placeholder="3311223344">
+                                    <input type="text" class="form-control border-0 text-center text-end no-background" id="phone" placeholder="3311223344" disabled>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="text-center">
-                                    <b>MULTIPLA A QUOTA FISSA</b>
+                                    <b>MULTIPLA QUOTA FISSA</b>
                                 </div>
                             </div>
                             <div class="col-12 mb-5" id="bet-slip-rows">
@@ -52,8 +53,8 @@
                             </div>
                             <div class="col-3 text-end">
                                 <div class="mb-3 ">
-                                    <input type="text" class="form-control border-0 text-end" id="amount"
-                                           aria-describedby="emailHelp" placeholder="0" onchange="updateTotal()">
+                                    <input type="text" class="form-control border-0 text-end text-end no-background" id="amount"
+                                           aria-describedby="emailHelp" placeholder="0" onchange="updateTotal()" disabled>
                                 </div>
                             </div>
                             <div class="col-9 ps-5">
