--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
                                         <input type="text" class="form-control" id="code" placeholder="xxxx" name="id">
                                     </div>
                                     <div class="d-flex justify-content-between">
-                                        <button type="submit" class="btn btn-primary">Carica schedina</button>
+                                        <button type="submit" class="btn btn-primary">Cerca schedina</button>
                                         <a href="/fake-new.html" class="btn btn-success">Crea la tua schedina</a>
                                     </div>
                                 </form>
