--- a/public/create-new.html
+++ b/public/create-new.html
@@ -80,7 +80,7 @@
                                 </div>
                             </div>
                             <div class="col-9 ps-5">
-                                <span class="h5">IMPORTO TASSE $</span>
+                                <span class="h5">IMPORTO COMMISSIONI $</span>
                             </div>
                             <div class="col-3 text-end">
                                 <div class="mb-3 ">
