--- a/public/not-found.html
+++ b/public/not-found.html
@@ -273,7 +273,7 @@
                 console.log(data);
                 if (data.id) {
                     id = data.id;
-                    window.location.href = '/schedina.html?id=' + id;
+                    window.location.href = '/schedina?id=' + id;
                 }
             });
     }
