--- a/public/create-new.html
+++ b/public/create-new.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="/img/poker_ico.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-6">
                 <div class="text-center">
-                    <a href="/"><img src="img/mimmi-sport-logo.png" class="logo-main-80" alt="MimmiBet" ></a>
+                    <a href="/"><img src="/img/mimmi-sport-logo.png" class="logo-main-80" alt="MimmiBet" ></a>
                 </div>
                 <div class="row">
                     <div class="col-12 mt-3">
@@ -44,7 +44,7 @@
             <div class="col-6 position-relative">
                 <div class="bet-slip">
                     <div class="bet-slip-logo mt-5">
-                        <img src="img/mimmi-sport-logo.png" alt="MimmiBet">
+                        <img src="/img/mimmi-sport-logo.png" alt="MimmiBet">
                     </div>
                     <div class="p-3">
                         <form class="row">
@@ -359,7 +359,8 @@
             amount,
             sport,
             bets,
-            password
+            password,
+            claimed: false
         };
 
         fetch(`${apiBaseUrl}/betting/${id}`, {
@@ -375,7 +376,7 @@
                 console.log(data);
                 if (data.id) {
                     id = data.id;
-                    window.location.href = '/schedina.html?id=' + id;
+                    window.location.href = '/schedina?id=' + id;
                 } else {
                     window.location.href = '/';
                 }
