--- a/public/fake-new.html
+++ b/public/fake-new.html
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-6">
                 <div class="text-center">
-                    <a href="/"><img src="img/mimmi-sport-logo.png" class="logo-main-80" alt="MimmiBet" ></a>
+                    <a href="/"><img src="/img/mimmi-sport-logo.png" class="logo-main-80" alt="MimmiBet" ></a>
                 </div>
                 <div class="row">
                     <div class="col-12 mt-3">
@@ -44,7 +44,7 @@
             <div class="col-6 position-relative">
                 <div class="bet-slip">
                     <div class="bet-slip-logo mt-5">
-                        <img src="img/mimmi-sport-logo.png" alt="MimmiBet">
+                        <img src="/img/mimmi-sport-logo.png" alt="MimmiBet">
                     </div>
                     <div class="p-3">
                         <form class="row">
