--- a/public/admin.html
+++ b/public/admin.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="/img/poker_ico.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -35,21 +35,25 @@
                                         <th scope="col">#</th>
                                         <th scope="col">Nome e Cognome</th>
                                         <th scope="col">Telefono</th>
+                                        <th scope="col">Pagata</th>
                                         <th scope="col">Actions</th>
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    <tr>
-                                        <th scope="row">aes2</th>
-                                        <td>Lorenzo Mimmi</td>
-                                        <td>3548754587</td>
-                                        <td><span class="material-icons">link</span><span
-                                                class="material-icons">done</span></td>
-                                    </tr>
                                     </tbody>
                                 </table>
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-12 text-center">
+                        <button type="button" class="btn btn-primary" onclick="location.href='/'">Torna alla Home
+                        </button>
+                        <button type="button" class="btn btn-secondary" onclick="location.href='/admin/new'">Crea Nuova
+                            Schedina
+                        </button>
+                        <button type="button" class="btn btn-danger" onclick="logout()">Logout</button>
                     </div>
                 </div>
             </div>
@@ -84,7 +88,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" onclick="login()">Save changes</button>
+                <button type="button" class="btn btn-primary" onclick="login()">LOGIN</button>
             </div>
         </div>
     </div>
@@ -123,6 +127,19 @@
             });
     }
 
+    function logout() {
+        fetch(`${apiBaseUrl}/auth/logout`, {
+            method: 'GET',
+            credentials: 'include'
+        })
+            .then(response => response.json())
+            .then(data => {
+                if (data.message === "Logged out successfully") {
+                    window.location.href = '/';
+                }
+            });
+    }
+
     function login() {
         window.event.preventDefault();
 
@@ -140,7 +157,7 @@
         }).then(response => response.json())
             .then(data => {
                 console.log(data);
-                if (data.loggedIn === true) {
+                if (data.message === "Logged in successfully") {
                     passwordModal.hide();
                 }
             });
@@ -160,7 +177,7 @@
 
 
         const url = `${apiBaseUrl}/betting/bet`;
-        fetch(url,{
+        fetch(url, {
             credentials: 'include'
         })
             .then(response => response.json())
@@ -173,10 +190,12 @@
                     const cell2 = row.insertCell(1);
                     const cell3 = row.insertCell(2);
                     const cell4 = row.insertCell(3);
+                    const cell5 = row.insertCell(4);
                     cell1.innerHTML = bet.id;
                     cell2.innerHTML = bet.name;
                     cell3.innerHTML = bet.phone;
-                    cell4.innerHTML = `<span class="material-icons" onclick="location.href = '/schedina?id=${bet.id}';"">link</span><span class="material-icons" onclick="claimBet('${bet.id}')">done</span>`;
+                    cell4.innerHTML = bet.claimed ? 'Si' : 'No';
+                    cell5.innerHTML = `<span class="material-icons" onclick="location.href = '/schedina?id=${bet.id}';"">link</span><span class="material-icons" onclick="claimBet('${bet.id}')">done</span>`;
                 });
             })
             .catch((error) => {
