--- a/public/create-new.html
+++ b/public/create-new.html
@@ -97,7 +97,7 @@
                                 </div>
                             </div>
                             <div class="col-12 text-center">
-                                <button class="btn btn-primary" onclick="saveBets()">SALVA</button>
+                                <button class="btn btn-primary" onclick="saveBets()">LOGIN</button>
                             </div>
                         </form>
                     </div>
