--- a/public/fake-new.html
+++ b/public/fake-new.html
@@ -109,6 +109,11 @@
         </div>
     </div>
 </section>
+<footer class="footer bg-dark text-light py-2 mt-5 sticky-bottom">
+    <div class="container text-center">
+        <p>&copy; 2024 <a href="https://meyler.it/">meyler.it</a>. Tutti i diritti riservati.</p>
+    </div>
+</footer>
 
 <script>
 
