--- a/public/admin.html
+++ b/public/admin.html
@@ -24,7 +24,16 @@
                 <div class="text-center">
                     <a href="/"><img src="/img/mimmi-sport-logo.png" class="logo-main-100" alt="MimmiBet"></a>
                 </div>
-
+                <div class="row mt-3">
+                    <div class="col-12 text-center">
+                        <button type="button" class="btn btn-primary" onclick="location.href='/'">Torna alla Home
+                        </button>
+                        <button type="button" class="btn btn-secondary" onclick="location.href='/admin/new'">Crea Nuova
+                            Schedina
+                        </button>
+                        <button type="button" class="btn btn-danger" onclick="logout()">Logout</button>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-12 mt-3">
                         <div class="card">
@@ -35,7 +44,7 @@
                                         <th scope="col">#</th>
                                         <th scope="col">Nome e Cognome</th>
                                         <th scope="col">Telefono</th>
-                                        <th scope="col">Pagata</th>
+                                        <th scope="col">Vinta</th>
                                         <th scope="col">Actions</th>
                                     </tr>
                                     </thead>
@@ -44,16 +53,6 @@
                                 </table>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="row mt-3">
-                    <div class="col-12 text-center">
-                        <button type="button" class="btn btn-primary" onclick="location.href='/'">Torna alla Home
-                        </button>
-                        <button type="button" class="btn btn-secondary" onclick="location.href='/admin/new'">Crea Nuova
-                            Schedina
-                        </button>
-                        <button type="button" class="btn btn-danger" onclick="logout()">Logout</button>
                     </div>
                 </div>
             </div>
