--- a/public/schedina.html
+++ b/public/schedina.html
@@ -87,6 +87,11 @@
         </div>
     </div>
 </section>
+<footer class="footer bg-dark text-light py-2 mt-5 sticky-bottom">
+    <div class="container text-center">
+        <p>&copy; 2024 <a href="https://meyler.it/">meyler.it</a>. Tutti i diritti riservati.</p>
+    </div>
+</footer>
 <script>
 
     const apiBaseUrl = '/api/v1';
