--- a/public/fake-new.html
+++ b/public/fake-new.html
@@ -109,7 +109,7 @@
         </div>
     </div>
 </section>
-<footer class="footer bg-dark text-light py-2 mt-5 sticky-bottom">
+<footer class="footer footer-background text-light py-2 mt-5 sticky-bottom">
     <div class="container text-center">
         <p>&copy; 2024 <a href="https://meyler.it/">meyler.it</a>. Tutti i diritti riservati.</p>
     </div>
