--- a/public/index.html
+++ b/public/index.html
@@ -16,28 +16,36 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-<section>
+<section class="">
     <div class="container content">
         <div class="row justify-content-center">
             <div class="col-6">
                 <div class="text-center">
-                    <a href="/"><img src="/img/mimmi-sport-logo.png" class="logo-main-100" alt="MimmiBet" ></a>
+                    <a href="/"><img src="/img/mimmi-sport-logo.png" class="logo-main-100" alt="MimmiBet"></a>
                 </div>
 
                 <div class="row">
                     <div class="col-12 mt-3">
-                        <div class="card">
+                        <div class="card mt-2 shadow">
                             <div class="card-body" id="odds">
                                 <form action="/schedina" method="GET">
-                                    <div class="mb-3">
-                                        <label for="code" class="form-label">Codice schedina</label>
-                                        <input type="text" class="form-control" id="code" placeholder="xxxx" name="id">
-                                    </div>
-                                    <div class="d-flex justify-content-between">
-                                        <button type="submit" class="btn btn-primary">Cerca schedina</button>
-                                        <a href="/play" class="btn btn-success">Crea la tua schedina</a>
+                                    <div class="mb-3d-flex justify-content-between">
+                                        <label for="code" class="form-label"><span><h3 class="text-center"><b>Hai già giocato la tua schedina?</b></h3></span></br>
+                                            <span>Fantastico, adesso è il momento di incrociare le dita.</br>Clicca sul pulsante qui sotto per visualizzare la tua schedina e scoprire se sei sul punto di cambiare la tua vita!</span></label>
+                                        <div class="d-flex mt-3">
+                                            <input type="text" class="form-control me-2" id="code" placeholder="Codice Schedina di 4 caratteri" name="id">
+                                            <button type="submit" class="btn btn-success">Cerca</button>
+                                        </div>
                                     </div>
                                 </form>
+                            </div>
+                        </div>
+                        <div class="card mt-3 shadow">
+                            <div class="card-body">
+                                <span><h3 class="text-center"><b>Non hai ancora giocato la schedina?</b></h3></br> È il momento perfetto per iniziare, non lasciare che questa opportunità ti sfugga! </br>Clicca il pulsante qui sotto e gioca la tua schedina in autonomia.</br>Chissà, potresti essere il prossimo a diventare ricco! Non aspettare, la fortuna ti aspetta!</span>
+                                <div class="d-flex justify-content-center mt-2">
+                                    <a href="/play" class="btn btn-success mt-3">Crea la tua schedina</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -46,7 +54,7 @@
         </div>
     </div>
 </section>
-<footer class="footer bg-dark text-light py-2 mt-5 sticky-bottom">
+<footer class="footer footer-background text-light py-2 mt-5 sticky-bottom">
     <div class="container text-center">
         <p>&copy; 2024 <a href="https://meyler.it/">meyler.it</a>. Tutti i diritti riservati.</p>
     </div>
