--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,8 @@
                                         <label for="code" class="form-label"><span><h3 class="text-center"><b>Hai già giocato la tua schedina?</b></h3></span></br>
                                             <span>Fantastico, adesso è il momento di incrociare le dita.</br>Clicca sul pulsante qui sotto per visualizzare la tua schedina e scoprire se sei sul punto di cambiare la tua vita!</span></label>
                                         <div class="d-flex mt-3">
-                                            <input type="text" class="form-control me-2" id="code" placeholder="Codice Schedina di 4 caratteri" name="id">
+                                            <input type="text" class="form-control me-2" id="code"
+                                                   placeholder="Codice Schedina di 4 caratteri" name="id">
                                             <button type="submit" class="btn btn-success">Cerca</button>
                                         </div>
                                     </div>
@@ -42,10 +43,43 @@
                         </div>
                         <div class="card mt-3 shadow">
                             <div class="card-body">
-                                <span><h3 class="text-center"><b>Non hai ancora giocato la schedina?</b></h3></br> È il momento perfetto per iniziare, non lasciare che questa opportunità ti sfugga! </br>Clicca il pulsante qui sotto e gioca la tua schedina in autonomia.</br>Chissà, potresti essere il prossimo a diventare ricco! Non aspettare, la fortuna ti aspetta!</span>
+                                <span><h3 class="text-center"><b>Non hai ancora giocato la schedina?</b></h3></br> È il momento perfetto per iniziare, non lasciare che questa opportunità ti sfugga! </br>
+                                    Clicca il pulsante qui sotto e gioca la tua schedina in autonomia.</br>Chissà, potresti essere il prossimo a diventare ricco! Non aspettare, la fortuna ti aspetta!</span>
                                 <div class="d-flex justify-content-center mt-2">
                                     <a href="/play" class="btn btn-success mt-3">Crea la tua schedina</a>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="card mt-3 shadow">
+                            <div class="card-body">
+                                <span><h3 class="m-0 p-0"><b>Regolamento mimmibet.it</b></h3><br></span>
+                                <span><h4 class=""><b>1. Pagamento in Contanti</b></h4><br></span>
+                                <span class="ml-3">1.1 Tutte le transazioni relative all'acquisto delle schedine di scommessa devono essere effettuate esclusivamente in contanti.<br></span>
+                                <span class="ml-3">1.2 In caso di vincita, il pagamento delle vincite sarà effettuato esclusivamente in contanti.<br></span>
+
+                                <span class="ml-3"><h4 class="mt-3"><b>2. Limiti di Scommessa</b></h4><br></span>
+                                <span class="ml-3">2.1 L'importo minimo per ogni scommessa è fissato a €5.000.<br></span>
+                                <span class="ml-3">2.2 L'importo massimo per ogni scommessa è fissato a €10.000.<br></span>
+                                <span class="ml-3">2.3 Ogni schedina di scommessa deve includere un minimo di 3 partite giocabili.<br></span>
+
+                                <span class="ml-3"><h4 class="mt-3"><b>3. Limiti di Vincita</b></h4><br></span>
+                                <span class="ml-3">3.1 L'importo massimo di vincita per ogni schedina di scommessa è fissato a €200.000.<br></span>
+
+                                <span class="ml-3"><h4 class="mt-3"><b>4. Pagamenti Differiti</b></h4><br></span>
+                                <span class="ml-3">4.1 In caso di indisponibilità temporanea di fondi sufficienti per effettuare il pagamento immediato delle vincite, l'importo dovuto sarà versato nella settimana successiva.<br></span>
+                                <span class="ml-3">4.2 I giocatori saranno tempestivamente informati tramite comunicazione diretta riguardo al differimento del pagamento e alla data prevista per il saldo.<br></span>
+
+                                <span class="ml-3"><h4 class="mt-3"><b>5. Disposizioni Generali</b></h4><br></span>
+                                <span class="ml-3">5.1 Il sito di scommesse si riserva il diritto di modificare il presente regolamento in qualsiasi momento, previa comunicazione agli utenti.<br></span>
+                                <span class="ml-3">5.2 Gli utenti sono tenuti a prendere visione e accettare il regolamento prima di effettuare qualsiasi scommessa.<br></span>
+
+                                <span class="ml-3"><h4 class="mt-3"><b>6. Contatti e Assistenza</b></h4><br></span>
+                                <span class="ml-3">6.1 Per qualsiasi informazione o richiesta di assistenza, gli utenti possono contattare il servizio clienti tramite i canali ufficiali indicati sul sito.<br></span>
+
+                                <span class="ml-3"><h4 class="mt-3"><b>7. Accettazione del Regolamento</b></h4><br></span>
+                                <span class="ml-3">7.1 L'acquisto di una schedina di scommessa implica l'accettazione totale del presente regolamento da parte dell'utente.<br></span>
+
+                                <span class="ml-3">Il regolamento entra in vigore a partire dalla data di pubblicazione sul sito.</span>
                             </div>
                         </div>
                     </div>
